<resources>
    <string name="app_name">My Application</string>

    <string name="txtten">Nhập tên</string>
    <string name="txtsdt">Nhập SĐT</string>
    <string name="vip">VIP</string>
    <string name="thuong">Thường</string>
    <string name="giuong">Giường nằm</string>
    <string name="ghe">Ghế ngồi</string>
    <string name="dichvu">Dịch vụ</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="cancle">Hủy</string>
    <string name="book">Thanh toán</string>

</resources>
